--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!-- Für die Spiele -->
+    <color name="colorDefault">#2c6bca</color>
+    <color name="colorRichtig">#56ff40</color>
+    <color name="colorFalsch">#ff404d</color>
 </resources>
