--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <!-- Für das Quiz -->
     <color name="colorDefault">#2c6bca</color>
+    <color name="colorFalse">#ff0d00</color>
+    <color name="colorCorrect">#2bff00</color>
 </resources>
