--- a/app/src/main/res/layout/datenschutzquiz.xml
+++ b/app/src/main/res/layout/datenschutzquiz.xml
@@ -12,24 +12,35 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:textColorHighlight="@color/colorPrimaryDark"
-            android:text="@string/quiz_introduction"
-            android:textSize="18sp" />
-
-        <TextView
             android:id="@+id/frage_loesung"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
+            android:layout_weight="0.8"
             android:minHeight="70dp"
-            android:paddingLeft="10dp"
-            android:textStyle="bold"
-            android:textSize="18sp" />
+            android:padding="10dp"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/rang"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textSize="18sp"
+            android:textStyle="italic"
+            android:padding="10dp" />
+
+        <Button
+            android:id="@+id/joker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:textAlignment="center"
+            android:layout_gravity="bottom"
+            android:padding="10dp"
+            android:textAllCaps="false"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:text="@string/joker"/>
 
         <LinearLayout
             android:layout_width="match_parent"
