--- a/app/src/main/res/layout/chancen_risiken_quiz.xml
+++ b/app/src/main/res/layout/chancen_risiken_quiz.xml
@@ -12,14 +12,6 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:text="@string/quiz_introduction"
-            android:textSize="18sp" />
-
-        <TextView
             android:id="@+id/frage_loesung"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -28,67 +20,46 @@
             android:minHeight="70dp"
             android:paddingLeft="10dp"
             android:textStyle="bold"
+            android:text="@string/quiz_introduction"
             android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.8"
+            android:layout_weight="1.5"
             android:minHeight="100dp"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/antwort1button"
-                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:id="@+id/true_button"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:textAllCaps="false"
                     android:textSize="16sp"
-                    android:theme="@style/CustomAccentOverlay" />
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@color/colorCorrect"/>
 
                 <Button
-                    android:id="@+id/antwort3button"
-                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:id="@+id/false_button"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:textAllCaps="false"
                     android:textSize="16sp"
-                    android:theme="@style/CustomAccentOverlay" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/antwort2button"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textAllCaps="false"
-                    android:textSize="16sp"
-                    android:theme="@style/CustomAccentOverlay" />
-
-                <Button
-                    android:id="@+id/antwort4button"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textAllCaps="false"
-                    android:textSize="16sp"
-                    android:theme="@style/CustomAccentOverlay" />
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/colorFalse"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
