--- a/app/src/main/res/layout/datenschutzquiz.xml
+++ b/app/src/main/res/layout/datenschutzquiz.xml
@@ -18,6 +18,7 @@
             android:layout_weight="0.8"
             android:minHeight="70dp"
             android:padding="10dp"
+            android:gravity="center_horizontal"
             android:textSize="18sp"
             android:textStyle="bold" />
 
