--- a/app/src/main/res/layout/herausforderungen.xml
+++ b/app/src/main/res/layout/herausforderungen.xml
@@ -11,6 +11,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <com.github.chrisbanes.photoview.PhotoView
+            android:id="@+id/photo_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerInside"/>
+
         <TextView
             android:id="@+id/introduction"
             android:layout_width="match_parent"
